[gd_scene load_steps=13 format=3 uid="uid://c0lqa365xd8y4"]

[ext_resource type="Script" path="res://scripts/enemies/enemy.gd" id="1_j7trm"]
[ext_resource type="Script" path="res://scripts/components/attach_point_component.gd" id="2_1i1ql"]
[ext_resource type="Script" path="res://scripts/components/damage_component.gd" id="3_dxhn6"]
[ext_resource type="Script" path="res://scripts/components/pathfinding_component.gd" id="4_i1xli"]
[ext_resource type="Script" path="res://scripts/components/character_movement_component.gd" id="5_n1usn"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="6_03a1l"]
[ext_resource type="Script" path="res://scripts/components/knockback_component.gd" id="7_yf3bc"]
[ext_resource type="PackedScene" uid="uid://l3ufh23wc32f" path="res://resources/components/health_bar_component.tscn" id="8_v5g63"]
[ext_resource type="PackedScene" uid="uid://chk3784byh0xe" path="res://resources/components/damage_indicator_component.tscn" id="9_34kcy"]
[ext_resource type="PackedScene" uid="uid://bvxitv8qu6bak" path="res://resources/ui/vector_visualizer.tscn" id="10_253i5"]

[sub_resource type="LabelSettings" id="LabelSettings_vnvpg"]
font_size = 64
font_color = Color(0.8, 0.8, 0.8, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kmmuq"]
font_size = 100
font_color = Color(0.8, 0.8, 0.8, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="Enemy" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_j7trm")

[node name="Projectile" type="Area2D" parent="."]
position = Vector2(-50, -72)

[node name="Label" type="Label" parent="Projectile"]
offset_left = 17.0
offset_top = 14.0
offset_right = 81.0
offset_bottom = 102.0
text = "㐅"
label_settings = SubResource("LabelSettings_vnvpg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Projectile"]
polygon = PackedVector2Array(22, 46, 40, 62, 17, 80, 29, 93, 53, 74, 67, 87, 80, 75, 64, 60, 77, 33, 60, 25, 50, 48, 32, 35)

[node name="Body" type="Label" parent="."]
offset_left = -50.0
offset_top = -72.0
offset_right = 50.0
offset_bottom = 65.0
text = "凵"
label_settings = SubResource("LabelSettings_kmmuq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-49.4, -69.8)
polygon = PackedVector2Array(4, 25, 4, 119, 96, 119, 96, 25, 75, 25, 75, 92, 25, 92, 25, 25)

[node name="AttachPointComponent" type="Node2D" parent="." node_paths=PackedStringArray("center", "head")]
position = Vector2(21, 51)
script = ExtResource("2_1i1ql")
center = NodePath("Center")
head = NodePath("Head")

[node name="Center" type="Node2D" parent="AttachPointComponent"]
position = Vector2(-21, -51)

[node name="Head" type="Node2D" parent="AttachPointComponent"]
position = Vector2(-56, -91)
rotation = -0.261799

[node name="DamageComponent" type="Node" parent="."]
script = ExtResource("3_dxhn6")
amount = 5

[node name="PathfindingComponent" type="Node" parent="." node_paths=PackedStringArray("movement")]
script = ExtResource("4_i1xli")
strategy = 2
movement = NodePath("../MovementComponent")
distance = 350.0

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("5_n1usn")
character = NodePath("..")
top_speed = 200.0
acceleration = 0.5
deceleration = 0.1
rotation_speed = 0.5

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("6_03a1l")

[node name="KnockbackComponent" type="Node" parent="." node_paths=PackedStringArray("health", "movement")]
script = ExtResource("7_yf3bc")
health = NodePath("../HealthComponent")
movement = NodePath("../MovementComponent")
knockback_factor = 1.5

[node name="HealthBarComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_v5g63")]
position = Vector2(0, -62)
health_component = NodePath("../HealthComponent")

[node name="Damage Indicator Component" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_34kcy")]
position = Vector2(-1.99999, -31)
health_component = NodePath("../HealthComponent")
damage_color = Color(0.619608, 0.619608, 0.619608, 1)

[node name="Vector To Target" parent="." node_paths=PackedStringArray("origin") instance=ExtResource("10_253i5")]
position = Vector2(1.33514e-05, -1.14441e-05)
scale = Vector2(4.38, 6)
mode = 1
origin = NodePath("..")
debug_color = Color(1, 0.3, 0.3, 0.411765)

[node name="Velocity Visualization" parent="." node_paths=PackedStringArray("origin") instance=ExtResource("10_253i5")]
position = Vector2(1.33514e-05, -1.14441e-05)
scale = Vector2(4.38, 6)
origin = NodePath("..")
debug_color = Color(0.3, 0.766667, 1, 0.411765)
